crates/rome_diagnostics/tests/macros/error_union.stderr
error: unions are not supported by the Diagnostic derive macro
 --> tests/macros/error_union.rs:4:1
  |
4 | union ErrorUnion {
  | ^^^^^
