crates/rome_diagnostics/tests/macros/error_union.rs
use rome_diagnostics::v2::Diagnostic;

#[derive(Diagnostic)]
union ErrorUnion {
    int: u32,
    float: f32,
}

fn main() {}
